save username and passwd

--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,8 @@
                         <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
                         <versionTagPrefix>loan-</versionTagPrefix>
                     </flowInitContext>
-                    <username>name@9188.com</username>
-                    <password>yourpassword</password>
+                    <username>826365976@qq.com</username>
+                    <password>826365976yue</password>
 
                 </configuration>
             </plugin>
