--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.anbang</groupId>
 
     <artifactId>mavenDemo_idea</artifactId>
-    <version>1.4-SNAPSHOT</version>
+    <version>1.4</version>
     <packaging>war</packaging>
     <dependencies>
     <!-- 解决编译时，报程序包javax.servlet不存在的错误 -->
